--- a/docker/nginx/conf/fpm.conf
+++ b/docker/nginx/conf/fpm.conf
@@ -1,4 +1,4 @@
-fastcgi_pass jb_notificator_php:9000;
+fastcgi_pass jb_payroll_php:9000;
 fastcgi_read_timeout 300;
 fastcgi_buffers 256 16k;
 fastcgi_buffer_size 128k;
